Add locale to PageMetaSchema
